# X-Cell

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
api/: index.html
data/: index.html
docs/: api.md  data.md  index.md  installation.md  model.md  quickstart.md
installation/: index.html
model/: index.html
quickstart/: index.html
search/: search_index.json
src/xcell/: __init__.py  model.py
tests/: test_placeholder.py
