[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcell"
version = "0.1.0"
description = "X-Cell: A Universal Virtual Cell Diffusion Language Model for Genome-Wide Perturbation Prediction"
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.10"
authors = [
    { name = "Xaira Therapeutics" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Inference-only dependencies
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "anndata>=0.10",
    "huggingface-hub>=0.20",
    "safetensors>=0.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ty>=0.1",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
tutorials = [
    "jupyter>=1.0",
    "scanpy>=1.9",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
# Full training stack (not needed for inference)
train = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "geomloss>=0.2",
    "wandb>=0.16",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://xaira-therapeutics.github.io/X-Cell"
Documentation = "https://xaira-therapeutics.github.io/X-Cell"
Repository = "https://github.com/Xaira-Therapeutics/X-Cell"
Issues = "https://github.com/Xaira-Therapeutics/X-Cell/issues"
"HuggingFace" = "https://huggingface.co/Xaira-Therapeutics/X-Cell"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["xcell"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ty]
environment.python-version = "3.10"
